# AutoSeg-SAM2

./: .gitignore  auto-mask-fast.py  pyproject.toml  pyproject.toml.bak
auto_mask_batch/: README.md  __init__.py  core.py
auto_mask_batch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: chickenchicken.sh  chickenchicken_fast.sh
