[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-mask-batch"
version = "0.1.0"
description = "Importable auto mask batch pipeline (SAM2 wrapper)"
readme = "auto_mask_batch/README.md"
requires-python = ">=3.10"
authors = [
  { name = "AutoSeg-SAM2 maintainers" }
]
license = { file = "LICENSE" }
dependencies = [
  "torch>=2.3.1",
  "torchvision>=0.18.1",
  "segment-anything @ file:submodule/segment-anything-1",
  "sam-2 @ file:submodule/segment-anything-2",
]

[project.urls]
Homepage = "https://github.com/daibopku/AutoSeg-SAM2"

[tool.setuptools.packages.find]
include = ["auto_mask_batch", "auto_mask_batch.*", "sam2", "sam2.*", "sam2_configs", "sam2_configs.*"]
exclude = ["submodule*", "videos*", "output*", "checkpoints*", "scripts*", "*.egg-info"]

[tool.setuptools]
zip-safe = false